--- a/future/future_of_work/templates/pages/lessons.html
+++ b/future/future_of_work/templates/pages/lessons.html
@@ -1,10 +1,11 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Lessons | Future of Work</title>
+  <title>{{ title }}</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
@@ -67,7 +68,7 @@
   <!-- Toast Container -->
   <div id="toast-container" class="fixed bottom-4 right-4 z-50 flex flex-col gap-2"></div>
 
-  <script src="js/lessons.js"></script>
+  <script src="{% static 'js/lessons.js'%}"></script>
 </body>
 </html>
 
